# ContextMaker

./: CMakeLists.txt  README.md  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportgenerator.cpp  reportgenerator.h
installer/config/: config.xml
resources/: app_resources.qrc
